syntax="proto3";

package follow;
option go_package="../follow/pb";
import "user.proto";
message RelationActionRequest{
  int64 user_id=1;
  string token=2;
  int64 to_user_id=3;
  int32 action_type=4;
}
message RelationActionResponse{
  int32 status_code=1;
  string status_msg=2;
}
message RelationFollowListRequest{
  int64 user_id=1;
  string token=2;
}
message RelationFollowListResponse{
  int32 status_code=1;
  string status_msg=2;
  repeated user.User user_list=3;
}
message UserRelationInfoRequest{
  int64 user_id=1;
  int64 author_id=2;
}
message UserRelationInfoResponse{
  int64 follower_count=1;
  int64 follow_count=2;
  bool is_follow=3;
}
message FollowListIDRequest{
  int64 user_id=1;
}
message FollowListIDResponse{
  repeated int64 follow_list=1;
}
service FollowService{
  rpc RelationAction(RelationActionRequest)returns (RelationActionResponse){}
  rpc FollowList(RelationFollowListRequest)returns (RelationFollowListResponse){}
  rpc FollowerList(RelationFollowListRequest)returns (RelationFollowListResponse){}
  rpc UserRelationInfo(UserRelationInfoRequest)returns (UserRelationInfoResponse){}
  rpc FollowListID(FollowListIDRequest)returns (FollowListIDResponse){}
  rpc FollowerListID(FollowListIDRequest)returns (FollowListIDResponse){}
}